<resources>
    <string name="app_name">Divar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="special">Special</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="city">City</string>
    <string name="phone_number">Phone number</string>
    <string name="submit">Submit</string>
    <string name="create_ad">Create AD</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="new_username">New Username</string>
    <string name="new_password">new Password</string>
    <string name="password">Password</string>
    <string name="e_mail_optional">E-mail(Optional)</string>
    <string name="log_out">Log Out</string>
    <string name="pass_discription">Warning : Password must be at least 8 characters, Contain an uppercase character, Contain a lowercase character and contain a number.</string>
    <string name="button">Confirm</string>
    <string name="title2">Pick Date</string>
    <string name="textview_title">Title</string>
    <string name="textview_title_hint">Enter your title here</string>
    <string name="textview_details">Details</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>
